bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: type boolean
var x:boolean = false 
      ^